welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: '(' expected but integer literal found.
 if 5((aSmile && bSmile)||(!aSmile && !bSmile)) {
    ^