welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
 if 5((aSmile && bSmile)||(!aSmile && !bSmile)) {
    return true;

  }
  return false;

}
